# trading_simulator

./: .gitignore  CHANGELOG.md  README.md  add_backdated_trade.sh  db_helper.sh  pyproject.toml  run.sh
infolder/: app.py  finance.db  finance.db.corrupted_backup  helpers.py  requirements.txt  test.html  vis.py
infolder/static/: cover.css  javascripti.js  modern-styles.css  styles.css  styli.css
infolder/templates/: apology.html  apology2.html  buy.html  first.html  history.html  index.html  index_new.html  layout.html  layout_new.html  learn.html  login.html  plot.html  quote_new.html  quote_result.html  quotes.html  quotsa.html  register.html  sell.html  welcome.html
