[project]
name = "trading-simulator"
version = "0.1.0"
description = "A web-based trading simulator for learning how to trade stocks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cs50>=9.3.0",
    "flask>=2.3.0",
    "flask-session>=0.5.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pandas-datareader>=0.10.0",
    "yfinance>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infolder"]

[dependency-groups]
dev = []
